--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "author": "Krisztian Balla <kriszi.balla@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "webpack -p --config=config/webpack.config.js"
+    "build": "rimraf dist && webpack -p --config=config/webpack.config.js"
   },
   "devDependencies": {
+    "rimraf": "^2.6.1",
     "webpack": "^2.2.1"
   }
 }
