--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "build": "rimraf dist && webpack -p --config=config/webpack.config.js"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.0",
+    "babel-core": "^6.24.0",
+    "babel-loader": "^6.4.1",
+    "babel-preset-es2015": "^6.24.0",
+    "babel-preset-stage-0": "^6.22.0",
     "rimraf": "^2.6.1",
     "webpack": "^2.2.1"
   }
