--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "babel-preset-stage-0": "^6.22.0",
     "rimraf": "^2.6.1",
     "webpack": "^2.2.1"
+  },
+  "dependencies": {
+    "debug": "^2.6.3"
   }
 }
