--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Krisztian Balla <kriszi.balla@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "rimraf dist && webpack -p --config=config/webpack.config.js"
+    "build": "rimraf dist && NODE_ENV=production webpack -p --config=config/webpack.config.js",
+    "dev": "NODE_ENV=development DEBUG=app:* nodemon bin/dev-server --ignore dist --ignore tests --ignore src"
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
@@ -14,8 +15,10 @@
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-stage-0": "^6.22.0",
+    "nodemon": "^1.11.0",
     "rimraf": "^2.6.1",
-    "webpack": "^2.2.1"
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.4.2"
   },
   "dependencies": {
     "debug": "^2.6.3"
