--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-stage-0": "^6.22.0",
+    "file-loader": "^0.10.1",
     "nodemon": "^1.11.0",
     "rimraf": "^2.6.1",
+    "url-loader": "^0.5.8",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.2"
   },
