--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-stage-0": "^6.22.0",
     "file-loader": "^0.10.1",
+    "html-webpack-plugin": "^2.28.0",
     "nodemon": "^1.11.0",
     "rimraf": "^2.6.1",
     "url-loader": "^0.5.8",
