--- a/package.json
+++ b/package.json
@@ -7,15 +7,23 @@
   "license": "MIT",
   "scripts": {
     "build": "rimraf dist && NODE_ENV=production webpack -p --config=config/webpack.config.js",
-    "dev": "NODE_ENV=development DEBUG=app:* nodemon bin/dev-server --ignore dist --ignore tests --ignore src"
+    "dev": "NODE_ENV=development DEBUG=app:* nodemon bin/dev-server --ignore dist --ignore tests --ignore src",
+    "lint": "eslint bin config server src tests",
+    "lint:fix": "npm run lint -- --fix"
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
     "babel-core": "^6.24.0",
+    "babel-eslint": "^7.1.1",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-stage-0": "^6.22.0",
     "css-loader": "^0.27.3",
+    "eslint": "^3.18.0",
+    "eslint-config-standard": "^7.0.1",
+    "eslint-plugin-babel": "^4.1.1",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^2.1.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
     "html-webpack-plugin": "^2.28.0",
