--- a/.eslintrc
+++ b/.eslintrc
@@ -1,17 +1,20 @@
 {
   "parser": "babel-eslint",
   "extends": [
-    "standard"
+    "standard",
+    "standard-react"
   ],
   "plugins": [
     "babel",
-    "promise"
+    "promise",
+    "react"
   ],
   "env": {
     "browser" : true
   },
   "rules": {
     "key-spacing"          : 0,
+    "jsx-quotes"           : [2, "prefer-single"],
     "max-len"              : [2, 120, 2],
     "object-curly-spacing" : [2, "always"]
   }
