--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.0",
+    "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
     "css-loader": "^0.27.3",
     "eslint": "^3.18.0",
     "eslint-config-standard": "^7.0.1",
+    "eslint-config-standard-react": "^4.3.0",
     "eslint-plugin-babel": "^4.1.1",
     "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-react": "^6.10.0",
     "eslint-plugin-standard": "^2.1.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
@@ -35,6 +38,8 @@
     "webpack-dev-server": "^2.4.2"
   },
   "dependencies": {
-    "debug": "^2.6.3"
+    "debug": "^2.6.3",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
   }
 }
