--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,13 @@
 {
+  "env": {
+    "test": {
+      "presets": [
+        "es2015",
+        "stage-0",
+        "react"
+      ]
+    }
+  },
   "presets": [
     [
       "es2015",
