--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build": "rimraf dist && NODE_ENV=production webpack -p --config=config/webpack.config.js",
     "dev": "NODE_ENV=development DEBUG=app:* nodemon bin/dev-server --ignore dist --ignore tests --ignore src",
     "lint": "eslint bin config server src tests",
-    "lint:fix": "npm run lint -- --fix"
+    "lint:fix": "npm run lint -- --fix",
+    "test": "NODE_ENV=test DEBUG=app:* mocha \"**/*.spec.js\" --compilers js:babel-core/register --require ./tests/test-helper.js --recursive --timeout 2000",
+    "test:watch": "npm run test -- --watch"
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
@@ -19,7 +21,11 @@
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
+    "chai": "^3.5.0",
+    "chai-as-promised": "^6.0.0",
+    "chai-enzyme": "^0.6.1",
     "css-loader": "^0.27.3",
+    "enzyme": "^2.7.1",
     "eslint": "^3.18.0",
     "eslint-config-standard": "^7.0.1",
     "eslint-config-standard-react": "^4.3.0",
@@ -30,8 +36,12 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
     "html-webpack-plugin": "^2.28.0",
+    "mocha": "^3.2.0",
     "nodemon": "^1.11.0",
+    "react-addons-test-utils": "^15.4.2",
     "rimraf": "^2.6.1",
+    "sinon": "^2.0.0",
+    "sinon-chai": "^2.8.0",
     "style-loader": "^0.14.1",
     "url-loader": "^0.5.8",
     "webpack": "^2.2.1",
