feat(sass-loader): add sass-loader, refactor webpack.config.js and add ip to make dev server accessable on network

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Krisztian Balla <kriszi.balla@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "rimraf dist && NODE_ENV=production webpack -p --config=config/webpack.config.js",
+    "build": "rimraf dist && NODE_ENV=production DEBUG=app:* webpack -p --config=config/webpack.config.js",
     "dev": "NODE_ENV=development DEBUG=app:* nodemon bin/dev-server --ignore dist --ignore tests --ignore src",
     "lint": "eslint bin config server src tests",
     "lint:fix": "npm run lint -- --fix",
@@ -36,10 +36,13 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
     "html-webpack-plugin": "^2.28.0",
+    "ip": "^1.1.5",
     "mocha": "^3.2.0",
+    "node-sass": "^4.5.0",
     "nodemon": "^1.11.0",
     "react-addons-test-utils": "^15.4.2",
     "rimraf": "^2.6.1",
+    "sass-loader": "^6.0.3",
     "sinon": "^2.0.0",
     "sinon-chai": "^2.8.0",
     "style-loader": "^0.14.1",
