--- a/package.json
+++ b/package.json
@@ -6,12 +6,43 @@
   "author": "Krisztian Balla <kriszi.balla@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "rimraf dist && NODE_ENV=production DEBUG=app:* webpack -p --config=config/webpack.config.js",
-    "dev": "NODE_ENV=development DEBUG=app:* nodemon bin/dev-server --ignore dist --ignore tests --ignore src",
+    "clean": "rimraf dist",
+    "compile": "better-npm-run compile",
+    "build": "better-npm-run build",
+    "dev": "better-npm-run dev",
     "lint": "eslint bin config server src tests",
     "lint:fix": "npm run lint -- --fix",
-    "test": "NODE_ENV=test DEBUG=app:* mocha \"**/*.spec.js\" --compilers js:babel-core/register --require ./tests/test-helper.js --recursive --timeout 2000",
+    "test": "better-npm-run test",
     "test:watch": "npm run test -- --watch"
+  },
+  "betterScripts": {
+    "compile": {
+      "command": "webpack -p --config=config/webpack.config.js",
+      "env": {
+        "DEBUG": "app:*"
+      }
+    },
+    "build": {
+      "command": "npm run lint && npm run test && npm run clean && npm run compile",
+      "env": {
+        "NODE_ENV": "production",
+        "DEBUG": "app:*"
+      }
+    },
+    "dev": {
+      "command": "nodemon bin/dev-server --ignore dist --ignore tests --ignore src",
+      "env": {
+        "NODE_ENV": "development",
+        "DEBUG": "app:*"
+      }
+    },
+    "test": {
+      "command": "mocha \"**/*.spec.js\" --compilers js:babel-core/register --require ./tests/test-helper.js --recursive --timeout 2000",
+      "env": {
+        "NODE_ENV": "test",
+        "DEBUG": "app:*"
+      }
+    }
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
@@ -21,6 +52,7 @@
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
+    "better-npm-run": "^0.0.14",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
     "chai-enzyme": "^0.6.1",
