--- a/package.json
+++ b/package.json
@@ -70,8 +70,14 @@
     "html-webpack-plugin": "^2.28.0",
     "ip": "^1.1.5",
     "mocha": "^3.2.0",
+    "mock-css-modules": "^1.0.0",
     "node-sass": "^4.5.0",
     "nodemon": "^1.11.0",
+    "postcss": "^5.2.16",
+    "postcss-cssnext": "^2.10.0",
+    "postcss-import": "^9.1.0",
+    "postcss-loader": "^1.3.3",
+    "postcss-url": "^5.1.2",
     "react-addons-test-utils": "^15.4.2",
     "rimraf": "^2.6.1",
     "sass-loader": "^6.0.3",
