--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
     "chai-enzyme": "^0.6.1",
+    "cheerio": "^0.22.0",
     "css-loader": "^0.27.3",
     "enzyme": "^2.7.1",
     "eslint": "^3.18.0",
