--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "file-loader": "^0.10.1",
     "html-webpack-plugin": "^2.28.0",
     "ip": "^1.1.5",
+    "jsdom": "^9.12.0",
     "mocha": "^3.2.0",
     "mock-css-modules": "^1.0.0",
     "node-sass": "^4.5.0",
