--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,8 @@
   ],
   "plugins": [
     "babel",
+    "import",
+    "node",
     "promise",
     "react"
   ],
@@ -24,6 +26,8 @@
   "rules": {
     "key-spacing"          : 0,
     "jsx-quotes"           : [2, "prefer-single"],
+    "comma-dangle"         : [2, "always-multiline"],
+    "indent"               : [2, 2, { "SwitchCase": 1, "flatTernaryExpressions": true }],
     "max-len"              : [2, 120, 2],
     "object-curly-spacing" : [2, "always"]
   }
